--- a/app/src/main/res/layout/activity_load_big_image.xml
+++ b/app/src/main/res/layout/activity_load_big_image.xml
@@ -5,14 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    android:fitsSystemWindows="true"
     >
 
-    <uk.co.senab.photoview.PhotoView
+    <com.example.well.luochen.view.PinchImageView
         android:id="@+id/iv"
+        android:paddingTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:src="@drawable/he"/>
+
+    <!--<uk.co.senab.photoview.PhotoView-->
+        <!--android:id="@+id/iv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:src="@drawable/he"/>-->
 
 </RelativeLayout>
