展示美女大图的时候 增加了动画

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="color_3">#007947</color>
     <color name="color_HotPink">#FF69B4</color>
     <color name="transparency">#00ffffff</color>
+    <color name="color_lightCyan">#E1FFFF</color>
 
 </resources>
