--- a/app/src/main/res/layout/activity_image_mv.xml
+++ b/app/src/main/res/layout/activity_image_mv.xml
@@ -22,4 +22,12 @@
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
+    <com.example.well.luochen.view.PinchImageView
+        android:id="@+id/iv_fg"
+        android:layout_width="match_parent"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        android:background="#7a000000"
+        android:layout_height="match_parent"/>
+
 </RelativeLayout>
