--- a/app/src/main/res/layout/activity_image_mv.xml
+++ b/app/src/main/res/layout/activity_image_mv.xml
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:fitsSystemWindows="true"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true">
+
     <ImageView
         android:id="@+id/iv_bg"
         android:layout_width="match_parent"
-        android:scaleType="centerCrop"
+        android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_height="match_parent"/>
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_rv"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.example.well.luochen.view.AutoSwipeRefreshLayout
+            android:id="@+id/asrl"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/list_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </android.support.v7.widget.RecyclerView>
+
+        </com.example.well.luochen.view.AutoSwipeRefreshLayout>
     </LinearLayout>
 
     <com.example.well.luochen.view.PinchImageView
         android:id="@+id/iv_fg"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#af000000"
         android:scaleType="centerCrop"
-        android:visibility="gone"
-        android:background="#7a000000"
-        android:layout_height="match_parent"/>
+        android:visibility="gone"/>
 
 </RelativeLayout>
