--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,4 +7,20 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <!--使用这个可以让Activity布局内容显示到 状态栏中-->
+    <style name="TestTheme" parent="android:Theme.Material.NoActionBar">
+
+        <!--下列两行控制使得应用窗口透明，用于展示一些差异-->
+        <item name="android:windowBackground">@color/transparency</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+        <!--设置导航栏/状态栏窗口color为透明  但是不会让布局透到状态栏里-->
+        <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+        <!--<item name="android:navigationBarColor">@android:color/transparent</item>-->
+
+        <!--可以透到状态栏里-->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+
 </resources>
