--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
 
-    <color name="black">#5e6b7b</color>
+    <color name="black">#000</color>
     <color name="line_gray">#d9d9d9</color>
     <color name="blue">#afdfe4</color>
     <color name="color_1">#f6f5ec</color>
