--- a/app/src/main/res/layout/item_activity_main.xml
+++ b/app/src/main/res/layout/item_activity_main.xml
@@ -67,9 +67,7 @@
             <com.example.well.luochen.view.PinchImageView
                 android:id="@+id/item_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_bg_af"
-                />
+                android:layout_height="wrap_content"/>
 
             <com.example.well.luochen.jcvideoplayer.JCVideoPlayerStandard
                 android:id="@+id/JCVP_S"
