--- a/app/src/main/res/layout/fragment_bdj.xml
+++ b/app/src/main/res/layout/fragment_bdj.xml
@@ -4,9 +4,9 @@
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <TextView
         android:layout_width="6dp"
