整理项目的时候有些资源id 被删掉了,改善了style 使启动的时候不影响 虚拟按键

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:fitsSystemWindows="true">
 
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/dl_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
