--- a/app/src/main/res/layout/activity_image_mv.xml
+++ b/app/src/main/res/layout/activity_image_mv.xml
@@ -6,6 +6,7 @@
 
 
     <ImageView
+        android:id="@+id/iv_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
@@ -16,10 +17,12 @@
         android:orientation="vertical">
 
         <com.example.well.luochen.view.AutoSwipeRefreshLayout
+            android:id="@+id/asrl"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </android.support.v7.widget.RecyclerView>
@@ -28,6 +31,7 @@
     </LinearLayout>
 
     <com.example.well.luochen.view.PinchImageView
+        android:id="@+id/iv_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#af000000"
