--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,5 +87,20 @@
         <item name="android:minWidth">1.0dip</item>
     </style>
 
+    <style name="toolbar_me" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- toolbar（actionbar）颜色 -->
+        <item name="colorPrimary">@color/blue</item>
+        <!-- 状态栏颜色 -->
+        <item name="colorPrimaryDark">@color/color_2</item>
+        <!-- 窗口的背景颜色 -->
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="actionOverflowMenuStyle">@style/toolbar</item>
+    </style>
+
+    <style name="toolbar" parent="@style/Widget.AppCompat.Light.PopupMenu.Overflow">
+        <item name="overlapAnchor">false</item>
+
+    </style>
+
 
 </resources>
