添加了电影详情页面

--- a/app/src/main/res/layout/activity_doubanmovedetail.xml
+++ b/app/src/main/res/layout/activity_doubanmovedetail.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/splash"
+                android:transitionName="big_img"
                 app:layout_collapseMode="parallax"
                 />
 
