--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/iv_demo"
         android:layout_width="match_parent"
-        android:scaleType="centerCrop"
+        android:layout_height="200dp"
+        android:transitionName="big_img"
         android:background="@drawable/login_register_bg"
-        android:layout_height="match_parent"/>
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
