md 的 转场动画完成

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -32,10 +32,9 @@
         <!--加上上面注释掉的这条的话华为手机下面的虚拟按键也会变得透明-->
     </style>
 
-
     <style name="toolbar_me" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- toolbar（actionbar）颜色 -->
-        <item name="colorPrimary">@android:color/transparent</item>
+        <item name="colorPrimary">@color/colorAccent</item>
         <!-- 状态栏颜色 -->
         <item name="colorPrimaryDark">@color/colorAccent</item>
         <!-- 窗口的背景颜色 -->
@@ -43,9 +42,10 @@
         <item name="actionOverflowMenuStyle">@style/toolbar</item>
 
         <!-- 指定进入和退出transitions -->
-        <item name="android:windowEnterTransition">@android:transition/fade</item>
-        <item name="android:windowExitTransition">@android:transition/fade</item>
+        <item name="android:windowEnterTransition">@android:transition/explode</item>
+        <item name="android:windowExitTransition">@android:transition/explode</item>
     </style>
+
 
 
 </resources>
