豆瓣电影详情大概完成

--- a/app/src/main/res/layout/item_douban_move.xml
+++ b/app/src/main/res/layout/item_douban_move.xml
@@ -5,7 +5,7 @@
                                     android:layout_height="200dp"
                                     android:layout_margin="10dp"
                                     android:padding="8dp"
-                                    app:cardBackgroundColor="#F0FFFF"
+                                    app:cardBackgroundColor="@color/color_4"
                                     app:cardCornerRadius="10dp"
                                     app:cardElevation="3dp">
 
