--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_1">#f6f5ec</color>
     <color name="color_2">#77ac98</color>
     <color name="color_3">#007947</color>
+    <color name="color_4">#F0FFFF</color>
     <color name="transparency">#00ffffff</color>
     <color name="color_bg_af">#af000000</color>
 
