--- a/app/src/main/res/layout/activity_doubanmovedetail.xml
+++ b/app/src/main/res/layout/activity_doubanmovedetail.xml
@@ -28,8 +28,8 @@
                 android:scaleType="centerCrop"
                 android:src="@mipmap/splash"
                 android:transitionName="big_img"
-                app:layout_collapseMode="parallax"
-                />
+                app:layout_collapseMode="parallax"/>
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tl_me"
@@ -46,10 +46,11 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        android:layout_marginBottom="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
@@ -59,73 +60,108 @@
             android:orientation="vertical"
             >
 
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="@color/blue"
+                android:layout_marginTop="8dp"
+                app:cardBackgroundColor="@color/color_4"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp">
 
-                <ImageView
-                    android:id="@+id/iv_mv"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/splash"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:maxLength="12"
+                        android:ellipsize="end"
+                        android:textSize="22dp"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="8dp"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="22dp"/>
+
+                        <RatingBar
+                            android:id="@+id/rb"
+                            style="?android:attr/ratingBarStyleSmall"
+                            android:layout_width="80dp"
+                            android:stepSize="0.1"
+                            android:isIndicator="false"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                app:cardBackgroundColor="@color/blue"
+                app:cardBackgroundColor="@color/color_4"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp">
 
-                <ImageView
-                    android:id="@+id/iv_me"
+                <TextView
+                    android:id="@+id/tv_info"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/splash"/>
-            </android.support.v7.widget.CardView>
-
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                app:cardBackgroundColor="@color/blue"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="3dp">
-
-                <ImageView
-                    android:id="@+id/iv_chao"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/splash"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:minHeight="200dp"
+                    android:textSize="16sp"/>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                app:cardBackgroundColor="@color/blue"
+                app:cardBackgroundColor="@color/color_4"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp">
 
-                <ImageView
-                    android:id="@+id/iv_dian"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/splash"
-                    />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="电影简介:"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/tv_intro"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lineSpacingMultiplier="1.2"
+                        android:minHeight="200dp"
+                        android:textScaleX="1"
+                        android:textSize="16sp"/>
+                </LinearLayout>
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
