--- a/app/src/main/res/layout/activity_doubanmovedetail.xml
+++ b/app/src/main/res/layout/activity_doubanmovedetail.xml
@@ -26,8 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/splash"
-                android:transitionName="big_img"
+                android:transitionName="share_img"
                 app:layout_collapseMode="parallax"/>
 
 
