--- a/app/src/main/res/layout/activity_load_big_image.xml
+++ b/app/src/main/res/layout/activity_load_big_image.xml
@@ -13,6 +13,7 @@
         android:layout_centerInParent="true"
         android:fitsSystemWindows="true"
         android:paddingTop="8dp"
+        android:transitionName="share_img"
         android:src="@drawable/load_failed"/>
 
     <!--<uk.co.senab.photoview.PhotoView-->
