--- a/app/src/main/res/layout/gifloading_main.xml
+++ b/app/src/main/res/layout/gifloading_main.xml
@@ -1,14 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/mBackground"
+                android:id="@+id/mBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
     >
-  <ImageView
-      android:id="@+id/iv"
-      android:layout_width="150dp"
-      android:layout_height="150dp"
-      android:src="@drawable/longmao"
-      android:layout_centerInParent="true"
-      android:layout_margin="10dp"
-      />
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/longmao"/>
 </RelativeLayout>
